test/typecheck/bad/missing_ret.ks
// FIXME INVALID RETURN
int main()
{
    3;
}
